--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 APScheduler==3.6.3
-fastapi==0.58.1
+fastapi==0.60.1
 Jinja2==2.11.2
 loguru==0.5.1
 mysqlclient==1.4.6
@@ -10,3 +10,4 @@ redis==3.5.3
 SQLAlchemy==1.3.18
 Twisted==20.3.0
 uvicorn==0.11.5
+passlib==
